[package]
name = "cliutils"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.82"
clap = { version = "4.4.18", features = ["derive"] }
console = "0.15.8"
indicatif = "0.17.7"
regex = "1.10.4"
thiserror = "1.0.56"
tokio = { version = "1.37.0", features = ["full"] }
